@@ -13,6 +13,7 @@ v2.1.2
   "xxxx-yyyy" this returns "yyyy", while imdb::year() is adjusted to "xxxx". Otherwise, both
   return the same year.
 ! imdb_topcharts::getChartsBoxOffice() was broken. Fixed thanx to hints from razor.
+! imdb::episodes() was completely broken, as the entire page design and structure changed (multiple pages now)
 
 v2.1.1 (19.12.2011)
 -------------------
